force-app/main/default/objects/Asset/fields/assetType__c.field-meta.xml
<CustomField>
    <fullName>assetType__c</fullName>
    <label>asset type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>scooter</fullName>
                <default>true</default>
                <label>scooter</label>
            </value>
            <value>
                <fullName>vehicle</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>