force-app/main/default/objects/Asset/fields/blng__InvoiceLineBalanceUpdated__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLineBalanceUpdated__c</fullName>
    <description>The time when invoice line balances was last updated successfully.</description>
    <inlineHelpText>The time when invoice line balances was last updated successfully.</inlineHelpText>
    <label>Invoice Line Balance Updated</label>
    <type>DateTime</type>
</CustomField>