force-app/main/default/objects/Asset/fields/demoField__c.field-meta.xml
<CustomField>
    <fullName>demoField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is the second version of the field</description>
    <label>demoField</label>
    <type>Checkbox</type>
</CustomField>