force-app/main/default/objects/Asset/fields/depotLocation__c.field-meta.xml
<CustomField>
    <fullName>depotLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>depot location</label>
    <referenceTo>depotLocation__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>scooters</relationshipName>
    <type>Lookup</type>
</CustomField>